Lecture du fichier parquet réparée et changement structure des colonnes, de la Table et des tests.