@@ -1,10 +1,10 @@
 package test.talkme.table;
 
-import org.apache.parquet.schema.PrimitiveType;
-import org.apache.parquet.schema.Type;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import talkme.table.Column;
+import talkme.table.ColonnesException;
+import talkme.table.MoteurStockage;
 import talkme.table.Table;
 
 import java.util.*;
@@ -13,54 +13,85 @@ import static org.junit.jupiter.api.Assertions.*;
 class TableTest {
 
     private Table table;
+    private MoteurStockage moteur;
 
     @BeforeEach
     void setup() {
-        table = new Table("TestTable");
+        // Create a map of columns for the table
+        Map<String, Column> columns = new HashMap<>();
+        columns.put("col1", new Column("STRING", new ArrayList<>()));
+        columns.put("col2", new Column("INTEGER", new ArrayList<>()));
+        
+        // Create the table with name and columns
+        table = new Table("TestTable", columns);
+        moteur = new MoteurStockage();
     }
 
     @Test
-    void testSetColumns() {
-        List<String> names = List.of("col1", "col2");
-        List<Type> types = List.of(
-                new PrimitiveType(Type.Repetition.OPTIONAL, PrimitiveType.PrimitiveTypeName.BINARY, "col1"),
-                new PrimitiveType(Type.Repetition.OPTIONAL, PrimitiveType.PrimitiveTypeName.INT32, "col2")
-        );
-
-        //table.setColumns(names, types);
-
-        List<Column> columns = table.getColumns();
-        assertEquals(2, columns.size(), "Table should contain two columns");
-        assertEquals("col1", columns.get(0).getName(), "First column name should be col1");
-        assertEquals("col2", columns.get(1).getName(), "Second column name should be col2");
+    void testTableCreation() {
+        assertEquals("TestTable", table.getName(), "Table name should be TestTable");
+        assertEquals(2, table.getColumns().size(), "Table should contain two columns");
+        assertTrue(table.getColumns().containsKey("col1"), "Table should contain col1");
+        assertTrue(table.getColumns().containsKey("col2"), "Table should contain col2");
     }
 
     @Test
-    void testSetColumnsMismatchedSizes() {
-        List<String> names = List.of("col1");
-        List<Type> types = List.of(
-                new PrimitiveType(Type.Repetition.OPTIONAL, PrimitiveType.PrimitiveTypeName.BINARY, "col1"),
-                new PrimitiveType(Type.Repetition.OPTIONAL, PrimitiveType.PrimitiveTypeName.INT32, "col2")
-        );
-
-        //Exception exception = assertThrows(IllegalArgumentException.class, () -> table.setColumns(names, types));
-        //assertEquals("Les listes names et types doivent avoir la même taille !", exception.getMessage(), "Should throw exception for mismatched sizes");
+    void testGetColumnNames() {
+        List<String> columnNames = table.getColumnNames();
+        assertEquals(2, columnNames.size(), "Table should have two column names");
+        assertTrue(columnNames.contains("col1"), "Column names should include col1");
+        assertTrue(columnNames.contains("col2"), "Column names should include col2");
     }
 
     @Test
-    void testInsertValidData() {
-        List<String> names = List.of("col1", "col2");
-        List<Type> types = List.of(
-                new PrimitiveType(Type.Repetition.OPTIONAL, PrimitiveType.PrimitiveTypeName.BINARY, "col1"),
-                new PrimitiveType(Type.Repetition.OPTIONAL, PrimitiveType.PrimitiveTypeName.INT32, "col2")
-        );
-        //table.setColumns(names, types);
+    void testInsertValidData() throws ColonnesException {
+        // Define columns to insert into
+        List<String> cols = Arrays.asList("col1", "col2");
+        
+        // Define data to insert
+        List<Object> col1Data = Arrays.asList("A", "B", "C");
+        List<Object> col2Data = Arrays.asList(1, 2, 3);
+        List<List<Object>> data = Arrays.asList(col1Data, col2Data);
+        
+        // Insert the data
+        moteur.insert(table, cols, data);
+        
+        // Verify the data was inserted correctly
+        List<Object> col1Values = table.getColumns().get("col1").getValues();
+        List<Object> col2Values = table.getColumns().get("col2").getValues();
+        
+        assertEquals(3, col1Values.size(), "Col1 should have 3 values");
+        assertEquals(3, col2Values.size(), "Col2 should have 3 values");
+        assertEquals("A", col1Values.get(0), "First value of col1 should be A");
+        assertEquals(1, col2Values.get(0), "First value of col2 should be 1");
+    }
 
-        List<List<Object>> rows = List.of(
-                List.of("A", "B", "C"), // Data for col1
-                List.of(1, 2, 3) // Data for col2
-        );
+    @Test
+    void testInsertInvalidColumn() {
+        // Define columns including an invalid one
+        List<String> cols = Arrays.asList("col1", "col3");
+        
+        // Define data to insert
+        List<Object> col1Data = Arrays.asList("A", "B", "C");
+        List<Object> col3Data = Arrays.asList(4, 5, 6);
+        List<List<Object>> data = Arrays.asList(col1Data, col3Data);
+        
+        // Attempt to insert with invalid column should throw exception
+        assertThrows(ColonnesException.class, () -> moteur.insert(table, cols, data), 
+                "Should throw exception when inserting into non-existent column");
+    }
 
-        assertDoesNotThrow(() -> table.insert(rows), "Valid data should be inserted without errors");
+    @Test
+    void testColumnEquality() {
+        Column col1 = new Column("STRING", Arrays.asList("A", "B"));
+        Column col2 = new Column("STRING", Arrays.asList("A", "B"));
+        Column col3 = new Column("INTEGER", Arrays.asList("A", "B"));
+        Column col4 = new Column("STRING", Arrays.asList(1, 2));
+        
+        assertTrue(col1.equals(col2), "Columns with same type and values should be equal");
+        assertFalse(col1.equals(col3), "Columns with different types should not be equal");
+        assertFalse(col1.equals(col4), "Columns with different value types should not be equal");
+        assertTrue(col1.equals(col1), "Column should be equal to itself");
+        assertFalse(col1.equals(null), "Column should not be equal to null");
     }
 }
